[NCIMT-8] Code cleansing -- Remove unused local variables, fix redundant null checking, improve error handling, etc. [KLO, 021413]
SVN-Revision: 132